--- a/code/016-WifiBootstrap/data/captiverestart.htm
+++ b/code/016-WifiBootstrap/data/captiverestart.htm
@@ -4,7 +4,7 @@
 <meta charset='utf-8'>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no"/>
 <title>
-Tasmota - Console</title>
+Brian's LED Captive Portal Page</title>
 <style>
 body {
   font-family: Verdana, sans-serif;
@@ -56,6 +56,6 @@ td {
 </style>
 <head>
 <body>
-Need to restart d1 mini.
+Saved. Please connect to the wifi network now and find IP address of the D1 mini.
 </body>
 </html>
