--- a/code/d1mini/data/index.htm
+++ b/code/d1mini/data/index.htm
@@ -133,12 +133,14 @@ body { margin: 0; padding: 0; }
   document.querySelectorAll(".textparam button").forEach(item => {
     item.addEventListener("click", event => {
     	event.preventDefault();
-    	let parent = event.target.parentElement;
-    	let command = parent.querySelector("input").getAttribute("data-command");
-    	let textarg = parent.querySelector("input").value;
-        document.querySelectorAll("#oneargs input")[0].value = command;
-        document.querySelectorAll("#oneargs input")[1].value = textarg;
-        document.querySelector("#oneargs").submit();
+    	let parent = document.getElementById("statictext");
+    	let command =event.target.getAttribute("data-command");
+    	let textarg1 = parent.querySelectorAll("input")[0].value;
+    	let textarg2 = parent.querySelectorAll("input")[1].value;
+        document.querySelectorAll("#twoargs input")[0].value = command;
+        document.querySelectorAll("#twoargs input")[1].value = textarg1;
+        document.querySelectorAll("#twoargs input")[2].value = textarg2;
+        document.querySelector("#twoargs").submit();
 
         let chosenOne = document.getElementsByClassName("chosen")[0]
         chosenOne.classList.remove('notchosen', 'chosen');
@@ -166,38 +168,32 @@ body { margin: 0; padding: 0; }
 
 <div class="notchosen commandonly">
     <a class="btn-ghost btn-white btn-align" data-command="0">
-      Top-Left Single Pixel
+      Test Pattern 1
     </a>
 </div>
 
 <div class="notchosen commandonly">
   <a class="btn-ghost btn-white btn-align" data-command="1">
-   Bottom-right pixel
+   Test Pattern 2
   </a>
 </div>
 
 <div class="notchosen commandonly">
     <a class="btn-ghost btn-white btn-align" data-command="2">
-      Top-Right Single Pixel
+      Test Pattern 3
     </a>
 </div>
 
 <div class="notchosen commandonly">
   <a class="btn-ghost btn-white btn-align" data-command="3">
-   Bottom-Left Single Pixel 
+   Test Pattern 4
   </a>
 </div>
 
 <div class="notchosen commandonly">
     <a class="btn-ghost btn-white btn-align" data-command="4">
-      Pixel scan
+      Test Pattern 5
     </a>
-</div>
-
-<div class="notchosen commandonly">
-  <a class="btn-ghost btn-white btn-align" data-command="5">
-   Snake game
-  </a>
 </div>
 
 <div class="notchosen singleparam">
@@ -205,10 +201,13 @@ body { margin: 0; padding: 0; }
      Static Text
     </a>    
 </div>
-<div class="textparam" >
-	<label for="statictext">TEXT</label><input type="text" name="statictext" maxlength="16" data-command="6"/><button>SEND</button>
+<div id="statictext" class="textparam" >
+	<div><label for="statictext">TEXT</label><input type="text" name="statictext1" maxlength="6"/>
+	<div><label for="statictext">TEXT</label><input type="text" name="statictext2" maxlength="6"/>	
+	<div><button data-command="*">SEND</button></div>
 </div>
 
+<!--
 <div class="notchosen singleparam">
   <a class="btn-ghost btn-white btn-align">
     Scrolling Text
@@ -217,7 +216,7 @@ body { margin: 0; padding: 0; }
 <div class="textparam" >
 	<label for="statictext">TEXT</label><input type="text" name="scrollingtext"  maxlength="16" data-command="7"/><button>SEND</button>
 </div>
-
+-->
 
 <form method="post" action="/command" name="noargs" id="noargs">
   <input type="hidden" name="command"/>
@@ -226,6 +225,12 @@ body { margin: 0; padding: 0; }
 <form method="post" action="/command" name="oneargs" id="oneargs">
   <input type="hidden" name="command"/>
   <input type="hidden" name="arg1">
+</form>
+
+<form method="post" action="/command" name="twoargs" id="twoargs">
+  <input type="hidden" name="command"/>
+  <input type="hidden" name="arg1">
+  <input type="hidden" name="arg2">
 </form>
 
 </body>
