--- a/code/d1mini/data/captiveportal.htm
+++ b/code/d1mini/data/captiveportal.htm
@@ -61,7 +61,7 @@ td {
     <h2>WiFi setup</h2>
     <h3>Connect to existing network</h3>
     Network name (SSID, empty to not connect): <br><input name="CS" maxlength="32"><br>
-    Network password: <br> <input type="password" name="CP" maxlength="63"><br>
+    Network password: <br> <input name="CP" maxlength="63"><br>
     <hr>
     <button type="submit">Save & Connect</button>
   </form>
