--- a/code/d1mini/data/index.htm
+++ b/code/d1mini/data/index.htm
@@ -182,7 +182,7 @@ body { margin: 0; padding: 0; }
 
 <div class="chosen commandonly">
     <a class="btn-ghost btn-white btn-align" data-command="@">
-      IDLE
+      CLEAR
     </a>
 </div>
 
