--- a/code/d1mini/data/captiveportal.htm
+++ b/code/d1mini/data/captiveportal.htm
@@ -58,12 +58,20 @@ td {
 <head>
 <body>
 <form id="form_s" name="Sf" method="post" action="/wificredentials">
-    <h2>WiFi setup</h2>
+
+    <h2>WiFi setup for Brian's LED Panels</h2>
+
+
+
     <h3>Connect to existing network</h3>
     Network name (SSID, empty to not connect): <br><input name="CS" maxlength="32"><br>
     Network password: <br> <input name="CP" maxlength="63"><br>
     <hr>
     <button type="submit">Save & Connect</button>
   </form>
+
+    <p style="padding-top: 150px; font-size: 16px;">You are in AP Mode.</p>
+    <p style="font-size: 16px;">Escape to Main Controls by clicking this house-> <a href="/main"> &#x1f3e0; </a></p>
+
 </body>
 </html>
