--- a/code/d1mini/data/index.htm
+++ b/code/d1mini/data/index.htm
@@ -54,6 +54,10 @@ background-color: #fdfff5; box-shadow: inset -4px 0 0 #aa0000, inset 0 -2px 0 #a
       background-color: #55fbfb !important;
     }
 
+    #credits {
+      background: rgb(85, 251, 251);
+    }
+
   </style>
   <script>
     /*
