--- a/code/d1mini/data/captiverestart.htm
+++ b/code/d1mini/data/captiverestart.htm
@@ -53,9 +53,33 @@ td {
 .d5 {
   width: 4.5em !important;
 }
+
+h3 {
+  margin-top: 40px;
+}
+
+ol {
+	text-align: left;
+	padding-left: 40px;
+}
+
 </style>
 <head>
 <body>
-Saved. Please connect to the wifi network now and find IP address of the D1 mini.
+
+<h3>Saved.</h3>
+
+<h4>Now What?</h4>
+ <ol>
+ <li>Please connect to your local wifi network now. </div>
+ <li>Find IP address of the D1 mini. You can find it a number of ways.
+ 	<ul>
+ 	  <li> If flashing firmware, it should be on the ESPHomeFlasher logs. </li>
+ 	  <li> If connected to the LED matrix, the IP address should be listed on it.</li> 
+ 	  <li> You can use a third-party network scanning tool like Angry IP Scanner</li>
+    </ul>
+ <li>Open a browser and put the IP address in. If you get a webpage back, wifi configuration of D1 mini is complete.</li>
+ </ol>
+
 </body>
 </html>
