scrolling text small font

--- a/code/d1mini/data/index.htm
+++ b/code/d1mini/data/index.htm
@@ -433,6 +433,7 @@ background-color: #fdfff5; box-shadow: inset -4px 0 0 #aa0000, inset 0 -2px 0 #a
         <label class="labelfirst">Text Font</label>
         <select id="scrollingtextfont">
           <option value="0">Default</option>
+          <option value="1">Small Font</option>
         </select>
        </div>
        <div class="field-row">
@@ -445,7 +446,7 @@ background-color: #fdfff5; box-shadow: inset -4px 0 0 #aa0000, inset 0 -2px 0 #a
        </div>
        <div class="field-row">
             <label  class="labelfirst" for="scrollingtexttext">Line 2 Scrolling Text</label>
-            <input id="scrollingtexttext" type="text" maxlength="32" size="32" /> 
+            <input id="scrollingtexttext" type="text" /> 
        </div>
         <div class="field-row">&nbsp;</div>
         <div class="field-row">&nbsp;</div>
