--- a/code/d1mini/data/captiveportal.htm
+++ b/code/d1mini/data/captiveportal.htm
@@ -64,6 +64,10 @@ display: block;
       display: none;
     }
 
+    a, a:visited, a:hover, a:active {
+      color: blue;
+    }
+
   	</style>
   	<script type="text/javascript">
 function  post_www_url_encoded(url, data) {
@@ -122,7 +126,7 @@ const asyncWait = ms => new Promise(resolve => setTimeout(resolve, ms))
 <section>
 	<div class="form-header">Panel Size</div>
 	<div class="form-group">
-		<label>Panel Dimensions <span title="Panel at MelbPC is 6x2 (6 LED matrix across, 2 LED matrix high)" style="color:blue;">&#8505;</span></label>
+		<label>Panel Dimensions (width x height) </label>
 		<input name="panelwidth" type="text" maxlength="2" size="2" value="6" /> x <input name="panelheight" type="text" maxlength="2" size="2" value="2" />
 	</div>
 	<div class="form-group">
