--- a/code/d1mini/data/captiveportal.htm
+++ b/code/d1mini/data/captiveportal.htm
@@ -30,6 +30,7 @@
     font-size: .875rem;
     letter-spacing: .25px;
     transition: background .3s ease;        	
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3); /* black with 30% opacity */
         }
 
   		.form-header {
@@ -68,6 +69,28 @@ display: block;
       color: blue;
     }
 
+    #savepanelsize {
+      position: relative;
+      overflow: hidden;
+      
+      cursor: pointer;
+    }
+
+    span.ripple {
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  animation: ripple 600ms linear;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+@keyframes ripple {
+  to {
+    transform: scale(4);
+    opacity: 0;
+  }
+}
+
   	</style>
   	<script type="text/javascript">
 function  post_www_url_encoded(url, data) {
@@ -80,6 +103,27 @@ function  post_www_url_encoded(url, data) {
 }
 
 const asyncWait = ms => new Promise(resolve => setTimeout(resolve, ms))
+
+function createRipple(event) {
+  const button = event.currentTarget;
+
+  const circle = document.createElement("span");
+  const diameter = Math.max(button.clientWidth, button.clientHeight);
+  const radius = diameter / 2;
+
+  circle.style.width = circle.style.height = `${diameter}px`;
+  circle.style.left = `${event.clientX - button.offsetLeft - radius}px`;
+  circle.style.top = `${event.clientY - button.offsetTop - radius}px`;
+  circle.classList.add("ripple");
+
+  const ripple = button.getElementsByClassName("ripple")[0];
+
+  if (ripple) {
+    ripple.remove();
+  }
+
+  button.appendChild(circle);
+}
 
 
   function recalculate(event) {
@@ -116,6 +160,8 @@ const asyncWait = ms => new Promise(resolve => setTimeout(resolve, ms))
       document.querySelector("#wificredentials").submit();
 
     });
+
+    document.querySelector("#savepanelsize").addEventListener("click", createRipple);
 
   });
   		
