--- a/code/d1mini/data/index.htm
+++ b/code/d1mini/data/index.htm
@@ -198,11 +198,13 @@ background-color: #fdfff5; box-shadow: inset -4px 0 0 #aa0000, inset 0 -2px 0 #a
           else if ( mode === 1) {
             const scrollingtext = document.getElementById("scrollingtexttextoneline");          
             const fontIndex = document.getElementById("scrollingtextfont").selectedIndex;
+            const yoffset = document.getElementById("scrollingtexttextonelineyposition");
 
-            document.querySelector("#twoargs input").value="K";
-            document.querySelector("#twoargs input[name='arg1']").value = scrollingtext.value;                 
-            document.querySelector("#twoargs input[name='arg2']").value = fontIndex;
-            document.querySelector("#twoargs").submit();
+            document.querySelector("#threeargs input").value="K";
+            document.querySelector("#threeargs input[name='arg1']").value = scrollingtext.value;
+            document.querySelector("#threeargs input[name='arg2']").value = yoffset.value; 
+            document.querySelector("#threeargs input[name='arg3']").value = fontIndex;
+            document.querySelector("#threeargs").submit();
           }
 
 
@@ -709,6 +711,13 @@ background-color: #fdfff5; box-shadow: inset -4px 0 0 #aa0000, inset 0 -2px 0 #a
   <input type="hidden" name="command"/>
   <input type="hidden" name="arg1">
   <input type="hidden" name="arg2">
+</form>
+
+<form method="post" action="/command" name="threeargs" id="threeargs">
+  <input type="hidden" name="command"/>
+  <input type="hidden" name="arg1">
+  <input type="hidden" name="arg2">
+  <input type="hidden" name="arg3">
 </form>
 
 <form method="post" action="/command" name="fourargs" id="fourargs">
